# routes/user.js
@@ -1,11 +1,12 @@
 const express = require('express');
 const router = express.Router();
-const { authenticationMiddleware } = require('../middleware/auth');
-const { getDocumentsUser, changeStatus } = require('../controllers/usercontroller');
+const { authenticationMiddleware, isUser } = require('../middleware/auth');
+const { getDocumentsUser, changeReadingStatus, changeCompletedStatus } = require('../controllers/usercontroller');
 
 
 
-router.get('/', authenticationMiddleware, getDocumentsUser);
-router.patch('/:id/change-status', authenticationMiddleware, changeStatus);
+router.get('/documents', authenticationMiddleware, isUser, getDocumentsUser);
+router.get('/:id/changeReadingStatus', authenticationMiddleware, isUser, changeReadingStatus);
+router.get('/:id/changeCompletedStatus', authenticationMiddleware, isUser, changeCompletedStatus);
 
 module.exports = router;
