# swagger.json
@@ -11,16 +11,13 @@
             "name": "auth",
             "description": "Authenticate"
         }, {
-            "name": "User",
-            "description": "Endpoints user"
+            "name": "User"
         },
         {
-            "name": "Admin",
-            "description": "Endpoints admin"
+            "name": "Admin"
         },
         {
-            "name": "Document",
-            "description": "Endpoints document"
+            "name": "Document"
         }
     ],
     "schemes": [
@@ -51,7 +48,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Login with username and password (admin)",
+                "summary": "Login with name and password (admin)",
                 "description": "",
                 "operationId": "login",
                 "consumes": [
@@ -63,59 +60,18 @@
                 "parameters": [{
                     "in": "body",
                     "name": "body",
-                    "description": "add username and password",
+                    "description": "add name and password",
                     "required": true,
                     "schema": {
                         "type": "object",
                         "properties": {
-                            "username": {
+                            "name": {
                                 "type": "string"
                             },
                             "password": {
                                 "type": "string"
                             }
 
-                        }
-                    }
-                }],
-                "responses": {
-                    "200": {
-                        "description": "msg : 'success', token: token, role:role"
-                    },
-                    "400": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/auth/admin/register": {
-            "post": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Register with username and password (admin)",
-                "description": "",
-                "operationId": "register",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "create username and password",
-                    "required": true,
-                    "schema": {
-                        "type": "object",
-                        "properties": {
-                            "username": {
-                                "type": "string"
-                            },
-                            "password": {
-                                "type": "string"
-                            }
                         }
                     }
                 }],
@@ -150,24 +106,6 @@
                 }
             }
         },
-        "/auth/logout": {
-            "get": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Logout",
-                "produces": [
-                    "application/xml",
-                    "application/json"
-                ],
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "messae: 'You are logged out'"
-                    }
-                }
-            }
-        },
 
         "/api/admin/documents/confirm/:id": {
             "get": {
@@ -176,19 +114,24 @@
                 ],
                 "description": "Get list users for assign document",
                 "produces": [
-                    "application/xml"
+                    "application/xml",
+                    "application/json"
                 ],
                 "parameters": [{
                     "name": "id",
                     "in": "path",
-                    "type": "string",
-                    "required": true
+                    "required": true,
+                    "type": "string"
                 }],
                 "responses": {
-                    "201": {
+
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/Document"
+                        },
                         "description": "Ok"
                     },
-                    "500": {
+                    "400": {
                         "description": "Internal Server Error"
                     }
                 }
@@ -232,7 +175,7 @@
                     "404": {
                         "description": "Not Found Doc"
                     },
-                    "500": {
+                    "400": {
                         "description": "Internal Server Error"
                     }
                 }
@@ -261,9 +204,9 @@
                         "schema": {
                             "$ref": "#/definitions/Document"
                         },
-                        "description": "Documents found."
+                        "description": "There are no documents."
                     },
-                    "500": {
+                    "400": {
                         "description": "Server Failure."
                     }
                 }
@@ -280,16 +223,20 @@
                     "application/json"
                 ],
                 "parameters": [{
-                    "name": "file",
+                    "name": "docs",
                     "in": "body",
                     "required": true,
-                    "type": "file"
+                    "type": "array",
+                    "example": {
+                        "title": "name title",
+                        "url": "uploads/example.pdf "
+                    }
                 }],
                 "responses": {
                     "200": {
                         "description": "Created Success"
                     },
-                    "500": {
+                    "400": {
                         "description": "Internal Server Error"
                     }
                 }
@@ -348,7 +295,7 @@
                         "description": "Update success"
                     },
                     "404": {
-                        "description": "Not Found"
+                        "description": "No doc with id"
                     }
                 }
             },
@@ -371,12 +318,68 @@
                         "description": "Delete success"
                     },
                     "404": {
+                        "description": "No doc with id"
+                    }
+                }
+            }
+        },
+        "/api/user/documents": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Get all list documents for user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "pageNumber",
+                    "in": "query",
+                    "description": "Page for pagination.",
+                    "type": "number"
+                }],
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/Document"
+                        },
+                        "description": "There are no documents."
+                    },
+                    "400": {
+                        "description": "Server Failure."
+                    }
+                }
+            }
+        },
+        "api/user/:id/changeReadingStatus": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Confirm document by id",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "type": "string"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Confirm success"
+                    },
+                    "404": {
                         "description": "Not Found"
                     }
                 }
             }
         },
-        "api/user/:id/change-status": {
+        "api/user/:id/changeCompletedStatus": {
             "get": {
                 "tags": [
                     "User"
@@ -402,17 +405,18 @@
             }
         }
     },
+
     "definitions": {
         "Document": {
             "type": "object",
             "properties": {
                 "title": {
                     "type": "string",
-                    "example": "Policy 01"
+                    "example": "name title"
                 },
                 "url": {
                     "type": "string",
-                    "example": "/uploads/polici-2124244.pdf"
+                    "example": "/uploads/example.pdf"
                 }
             },
             "required": [
